2012-10-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lcdf-typetools-2.95-PATHES/patch-30-W32TeX: 
	* lcdf-typetools-2.95/otftotfm/automatic.cc:
	use a texmf.cnf variable jtex_filetype to distinguish TeX Live and
	W32TeX.

2012-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lcdf-typetools-2.95, now into subdirectory.
	* version.ac: Adapted.
	* Makefile.am, configure.ac: Adapted to the new layout.
	* tests/{t1,tfm,ttf}.test: Adapted to the new layout.

2012-08-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tfm.test: New shell script for an additional test.
	* tests/antpolt-regular.otf, tests/texnansx.enc,
	tests/Ant.{enc,map,pfb,pl}: Tfm test input and expected output.
	* Makefile.am: Add the additional test and its data.

2012-08-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/t1.test tests/ttf.test: New shell scripts for tests.
	* tests/t2c.enc, tests/uhvrrc8a.pfb, tests/uhv_dl.{pfa,pfb,ps},
	tests/uhv_re.{afm,pfa}: T1 test input and expected output.
	* tests/FonetikaDaniaIwonaeBold.ttf, tests/texmfhome.otf,
	tests/Fon.{post,t42}, tests/tmf.{info,pfa,pfb,tables}:
	Ttf test input and expected output.
	* Makefile.am: Add the tests and their data.

2012-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lcdf-typetools-2.94.
	* version.ac: Adapted.
	* configure.ac: Adapted.

2011-12-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace DISTCHECK_CONFIGURE_FLAGS by
	AM_DISTCHECK_CONFIGURE_FLAGS (for automake-1.11.2).

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Add CXXLD.sh.

2011-09-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid pkgdata_DATA in order not to install an
	empty $(pkgdatadir).

2011-08-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lcdf-typetools-2.92.
	* version.ac: Adapt.

2011-06-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lcdf-typetools-2.90.
	* version.ac: New file defining the lcdf-typetools version.